feat: select character button

--- a/src/app/people/people.component.css
+++ b/src/app/people/people.component.css
@@ -1,21 +1,35 @@
 .people-container {
     display: flex;
-    width: 900px;
+    justify-content: space-around;
+    width: 850px;
     margin: 0 auto;
 }
 
 .character-card {
     width: 220px;
     height: 300px;
-    margin: 20px;
     padding: 5px 20px;
     background-color: #1b1b1b;
     font-family: monospace;
-    order: 3;
     border: 3px solid #fffb00;
     border-radius: 20px;
 }
 
 .character-card-info {
     font-size: large;
+}
+
+.character-select-container {
+    display: flex;
+    justify-content: space-around;
+    width: 850px;
+    margin: 10px auto;
+}
+
+.character-select {
+    padding: 8px 25px;
+    font-family: monospace;
+    background-color: #fffb00;
+    border: 1px solid #fffb00;
+    cursor: pointer;
 }
