--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -30,3 +30,13 @@
         </div>
     </div>
 </div>
+<div class="character-select-container">
+    <button
+        class="character-select"
+        *ngFor="let character of fetchedPeople"
+        (click)="onSelect(character)"
+    >
+        Details
+    </button>
+</div>
+<app-character-detail [character]="selectedCharacter"></app-character-detail>
