--- a/src/app/people/people.component.css
+++ b/src/app/people/people.component.css
@@ -1,12 +1,14 @@
 .people-container {
     display: flex;
     justify-content: space-around;
-    width: 850px;
+    max-width: 850px;
+    width: 100%;
     margin: 0 auto;
 }
 
 .character-card {
-    width: 220px;
+    min-width: 220px;
+    max-width: 100%;
     height: 300px;
     padding: 5px 20px;
     background-color: #1b1b1b;
@@ -21,9 +23,9 @@
 
 .character-select-container {
     display: flex;
-    justify-content: space-around;
-    width: 850px;
-    margin: 10px auto;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
 }
 
 .character-select {
@@ -34,8 +36,27 @@
     cursor: pointer;
 }
 
+.character-select:hover {
+    background-color: #1b1b1b;
+    color: #fffb00;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+@media (max-width: 900px) {
+    .people-container {
+        display: block;
+    }
+    .character-card {
+        max-width: 80%;
+        height: 220px;
+        margin: 20px auto;
+    }
+    .character-select {
+        padding: 8px 100px;
+    }
 }
