--- a/src/app/character-detail/character-detail.component.css
+++ b/src/app/character-detail/character-detail.component.css
@@ -1,10 +1,11 @@
 .character-detail-container {
+    max-width: 100%;
     width: 850px;
     margin: 30px auto;
 }
 
 .character-details-box {
-    max-width: 790px;
+    max-width: 100%;
     height: 220px;
     padding: 5px 20px;
     margin: 0 auto;
@@ -22,4 +23,10 @@
 
 .film-list {
     list-style-type: circle;
+}
+
+@media screen and (max-width: 900px) {
+    .character-details-box {
+        max-width: 80%;
+    }
 }
