update people component

--- a/src/app/people/people.component.css
+++ b/src/app/people/people.component.css
@@ -7,8 +7,7 @@
 }
 
 .character-card {
-    min-width: 220px;
-    max-width: 100%;
+    width: 220px;
     height: 300px;
     padding: 5px 20px;
     background-color: #1b1b1b;
@@ -52,7 +51,7 @@ ul {
         display: block;
     }
     .character-card {
-        max-width: 80%;
+        width: 80%;
         height: 220px;
         margin: 20px auto;
     }
