--- a/src/app/character-detail/character-detail.component.less
+++ b/src/app/character-detail/character-detail.component.less
@@ -1,32 +1,28 @@
-.character-detail-container {
-    max-width: 100%;
+@background-color: #1a1a1a;
+@border-color: #fffb00;
+@large-screen-width: 100%;
+@small-screen-width: 80%;
+
+.character {
+    max-width: @large-screen-width;
     width: 850px;
     margin: 30px auto;
-}
-
-.character-details-box {
-    max-width: 100%;
-    height: 220px;
-    padding: 5px 20px;
-    margin: 0 auto;
-    background-color: #1b1b1b;
-    font-family: monospace;
-    border: 3px solid #fffb00;
-    border-radius: 20px;
-}
-
-.detail-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.film-list {
-    list-style-type: circle;
-}
-
-@media screen and (max-width: 900px) {
-    .character-details-box {
-        max-width: 80%;
+    &-details-box {
+        max-width: @large-screen-width;
+        height: 220px;
+        padding: 5px 20px;
+        margin: 0 auto;
+        background-color: @background-color;
+        font-family: monospace;
+        border: 3px solid @border-color;
+        border-radius: 20px;
+        @media (max-width: 900px) {
+            max-width: @small-screen-width;
+        }
+    }
+    &-details-list {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
     }
 }
