--- a/src/app/people/people.component.less
+++ b/src/app/people/people.component.less
@@ -53,3 +53,14 @@
         }
     }
 }
+
+.system-consoles {
+    display: flex;
+    justify-content: space-around;
+    max-width: 850px;
+    width: @large-screen-width;
+    margin: 0 auto;
+    @media (max-width: 900px) {
+        display: block;
+    }
+}
