update messages and charcter detail component

--- a/src/app/character-detail/character-detail.component.less
+++ b/src/app/character-detail/character-detail.component.less
@@ -10,7 +10,7 @@
         width: @small-screen-width;
     }
     &-details-box {
-        height: 220px;
+        height: 250px;
         padding: 5px 20px;
         background-color: @background-color;
         font-family: monospace;
@@ -21,6 +21,7 @@
         }
     }
     &-details-list {
+        font-size: large;
         list-style-type: none;
         margin: 0;
         padding: 0;
