--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,6 @@
 <div class="system">
     <div class="system-logs">
-        <div>user @ C:</div>
+        <div>user @ star terminal:</div>
         <div *ngIf="messageService.messages.length">
             <div *ngFor="let message of messageService.messages">
                 > {{ message }}
