--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -6,10 +6,10 @@
         <div class="character-details-text" *ngIf="character">
             <h2>Selected: {{ character.name }}</h2>
         </div>
-        <ul class="character-details-list">
+        <ul class="character-details-list" *ngIf="character">
             <li *ngIf="species">Species: {{ species }}</li>
             <li *ngIf="homeworld">Homeworld: {{ homeworld }}</li>
-            <li *ngIf="films.length >= 1">
+            <li *ngIf="films">
                 Appears on:
                 <ul>
                     <li *ngFor="let film of films">
