use separate routes to fetch details

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -49,6 +49,8 @@
 <div class="system-consoles">
     <app-character-detail
         [character]="selectedCharacter"
+        [hasHomeworld]="hasHomeworld"
+        [hasSpecies]="hasSpecies"
         [species]="fetchedSpecies"
         [homeworld]="fetchedHomeworld"
         [films]="fetchedFilms"
