--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -7,8 +7,8 @@
             <h2>Selected: {{ character.name }}</h2>
         </div>
         <ul class="character-details-list" *ngIf="character">
-            <li *ngIf="species">Species: {{ species }}</li>
-            <li *ngIf="homeworld">Homeworld: {{ homeworld }}</li>
+            <li>Species: {{ hasSpecies ? species.name : 'unknown' }}</li>
+            <li>Homeworld: {{ hasHomeworld ? homeworld.name : 'unknown' }}</li>
             <li *ngIf="films">
                 Appears on:
                 <ul>
