use forkJoin to check if all details are loaded

--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -12,7 +12,7 @@
                 Classification: {{ species.classification }}
             </li>
             <li *ngIf="hasSpecies">
-                Avgerage lifespan:
+                Average lifespan:
                 {{
                     species.average_lifespan === 'unknown' ||
                     species.average_lifespan === 'indefinite'
